# moreorlesswrong

./: .gitignore  CLAUDE.md  README.md  V3_Metric_Descriptions.md  import_alej_v3_metrics.py  paul-virtues.MD  pyproject.toml
data/author_fame_cache/: 0106ef21_Ethan_Spencer.json  015b9dbc_EAHistorian.json  0180a2b4_Constance_Li.json  031dc733_Astelle_Kay.json  0421dc11_Ian_Turner.json  043b9c48_Patrick_Mayerhofer_🔸.json  0541eb5a_Brooke_O'Connell_🔸.json  05a16843_Kevin_Xia_🔸.json  05c937be_Daria_S.json  05e98136_Tyner🔸.json  061fc263_Calum.json  06a83cff_Stephen_Robcraft.json  06a8e636_Era_Sarda.json  074c7727_NunoSempere.json  07cb52ad_Jim_Buhler.json  088567b8_Taimur_Abdaal.json  0885e852_Pseudanon.json  08f07ee8_KMF.json  0a2eccf8_abergal.json  0a49031d_Felix_De_Simone.json  0ab24a9a_trammell.json  0ad2755c_Murage_Kibicho.json  0bd02e60_DanielFilan.json  0c5ef379_James_Norris.json  (+522 more)
migrations/: add_alej_v1_metrics_jsonb.sql
moreorlesswrong/: claim_extractor.py  claim_metric_pipeline.py  claim_metric_registry.py  db.py  enhanced_prediction_experiment.py  import_alej_v1_metrics.py  import_alej_v2_metrics.py  json_utils.py  linear_regression_experiment.py  llm_client.py  metric_models.py  metric_protocol.py  metric_registry_v2.py  models.py  pipeline.py  post_metric_pipeline.py  post_metric_registry.py  prev_post_synthesizer.py  raw_context_formatter.py  streamlit_app.py  streamlit_metrics_db_app.py  streamlit_post_app.py  streamlit_v0_explorer.py  streamlit_v3_explorer.py  synthesis_metric_base.py  synthesis_metric_registry.py  synthesizer.py  synthetic_post_grader.py
(+1053 files in other folders)
